--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedules
+  h1 check Train Schedules
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
