Made change to header

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Boston Rail Train Finder
+  h1 Find you train!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
