--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,7 @@
 extends layout
 
 block content
-<<<<<<< HEAD
-  h1 Find your train!
-=======
-  h1 Find Your Train
->>>>>>> master
+  h1 Find Your Choo-Choo Train!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
