--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 changed by hajera- find train
+  h1 changed by hajera2- find train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
