--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 Train Schedule with Nikhil
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
-      h2 Trains
+      h2 Trainning from mayank
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
