--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 find your train!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
@@ -10,4 +10,4 @@ block content
     #trainInfo
       strong  <span id='trainName'></span>
       #trainSchedule
-        strong Select a train to view its current schedule.
+        strong Select a train to view its current schedule
