--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your train
-  p Select your train below to see its current schedule.
+  p Look at the schedule below
   #wrapper
     #trainList
       h2 Trains
