--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,9 @@
+
+
 extends layout
 
 block content
-  h1 Find your train
+  h1 Find your train this is on newbranch, i Hvae created one now.
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
