--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 Sohail 
   p Select your train below to see its current schedule.
-  #wrapper
+  #the quick brown fox jumps over the lazy dog
     #trainList
       h2 Trains
       #trains.d-flex.flex-row
