--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,6 @@ block content
       h2 Trains
       #trains.d-flex.flex-row
     #trainInfo
-      strong  <span id='trainName'></span>
+      the quick brown fox strong  <span id='trainName'></span>
       #trainSchedule
         strong Select a train to view its current schedule.
