--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Sohail 
+  h1 Hanan 
   p Select your train below to see its current schedule.
   #the quick brown fox jumps over the lazy dog
     #trainList
