--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
-      h2 Trains
+      h2 Training
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
