changed header text of index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
-
+hi find your train !!
 block content
   h1 Train Schedule
   p Select your train below to see its current schedule.
