--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Train Schedule
-find your train,I just wanted in the same way 	
+find your train	
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
