--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
-
+The quick branch fox jumps over the lazy dog
 block content
-  h1 I am gonna win In Sha Allah 
+  ha1 I am gonna win In Sha Allah 
   p Select your train below to see its current schedule.
   #the quick brown fox jumps over the lazy dog
     #trainList
