--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1 Train Schedule
   p Select your train below to see its current schedule.
+  p this is a test to the git hub 
   #wrapper
     #trainList
       h2 Trains
