--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,11 @@ extends layout
 
 block content
   h1 Find your train please!
+  h1 Find your train please!
+  h1 Find your train please!
+  h1 Find your train please!
+  h1 Find your train please!
+  h1 Find your train please!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
