--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train find your train 
+  h1 Train find your train for rajadhani express
    Select your train below to see its current schedule.
   #wrapper
     #trainList
