--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 Train Schedule
+  h2 Train Schedule change by new
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
