--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 Find your train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
@@ -9,5 +9,5 @@ block content
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
-      #trainSchedule
+      #Find your train!
         strong Select a train to view its current schedule.
