--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 find ur train
-  p Select your train below to see its current schedule.
+  h1 look for ur train
+  p Select your train below to see its current schedule
   #wrapper
     #trainList
       h2 Trains
