--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Welcome to CHS Train Schedule
+  h1 Welcome to CHS Train Schedule ... Jeooo !! Kya baat hai Rocky !
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
