index file changed

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Welcome to CHS Train Schedule ... Jeooo !! Kya baat hai Rocky !
-  p Select your train below to see its current schedule.
+  p Find your train please ... jaddi pasand karo !
   #wrapper
     #trainList
       h2 Trains
