--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Amazing Train Schedule
+  h1 SL Train Schedule
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
