--- a/views/index.jade
+++ b/views/index.jade
@@ -9,5 +9,5 @@ block content
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
-      #trainSchedule
+      #Find your Train!
         strong Select a train to view its current schedule.
