--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 Train Schedule changed to Find your Train
+
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
