updated by cloud

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule !!! by cloud
+  h1 Train Schedule !!! by cloud on 31st Dec
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
