bad change merge request

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-  h1 Find my train - don't do this ever again
-  p Select your train below to see its current schedule.
+  h1 Bad Change
   #wrapper
     #trainList
       h2 Trains
