--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1 Bad Change
   #wrapper
     #trainList
-      h2 Trains
+      h2 Train yo - this should be bad
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
