--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your Train!
+  h1 Find your Train on track 3!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
