--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Train Schedule
-  p Find your train!
+  p Find your train now!
   #wrapper
     #trainList
       h2 Trains
