--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Moh's gonna do a Train Schedule
+  h1 Moh is going to do a Train Schedule
   p Select your train To ALGERIA below to see its current schedule.
   #wrapper
     #trainList
