--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-  h1 Train Schedule
-  p Select your train below to see its current schedule.
+  found your train!
+  Select your train below to see its current schedule.
   #wrapper
     #trainList
       h2 Trains
-      #trains.d-flex.flex-row
+     #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
       #trainSchedule
