--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,14 +19,17 @@ a {
 	top:0; left:0; margin-bottom:25px;
 	padding:15px;
 	border:1px solid #CCC;
-	background:rgba(80,120,255,0.05);
+	/* background:rgba(80,120,255,0.05); */
+	background:rgba(00, 188, 212, 0.05);
 }
 
 #trainInfo {
 	top:0; left:0;
 	padding:15px;
 	border:1px solid #CCC;
-	background:rgba(80,120,255,0.05);
+	/* background:rgba(80,120,255,0.05); */	
+	background:rgba(00, 188, 212, 0.05);
+
 }
 	#trainInfo p {
 		padding:15px;
