Commit new Branch

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Test Change Schedule Train
+  h1 Test Change Schedule Train in New Branch
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
