--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Aici am modificat
+  h1 Aici am modificat a 2 a ora
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
