--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
-extends layout
+erxtends layout
 
 block content
-  h1 Train Schedule
+  h1 Ravi find your train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
