Added new comment

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Here is your Train Schedule - from branch 1
+  h1 Here is your Train Schedule - Please make a copy 
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
