Changes made to be pushed

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Train Scheduler
-  p Select your train below to see its current schedule. Have a wonderful day
+  p Select your train below to see its current schedule. Have a wonderful day all
   #wrapper
     #trainList
       h2 Trains
