--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 Find your Train!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
@@ -11,3 +11,6 @@ block content
       strong  <span id='trainName'></span>
       #trainSchedule
         strong Select a train to view its current schedule.
+
+
+
