Andy comment on layout.jade file

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,3 +8,7 @@ html
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='/javascripts/global.js')
+
+# I just want to make any kind of changes so that i will learn how it works!
+# Andy you are doing great and you have to keep pushing, you are the MAN!
+
