--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1 Find your train! 
+  p Helping you get where you need
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
