--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1 Find your train! 
   p Helping you get where you need
+  p Keep safe!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
