--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ block content
     #trainList
       h2 Trains
       #trains.d-flex.flex-row
+    #this is train
     #trainInfo
       strong  <span id='trainName'></span>
       #trainSchedule
