--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your train - Choo Choo! 
+  h1 Find your train - Chuga Chuga Choo Choo!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
