header line is added

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+HEADER LINE IS ADDED I AM FAYAZALI
   h1 find your train:
   p Select your train below to see its current schedule.
   #wrapper
