added a new text

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,3 +11,5 @@ block content
       strong  <span id='trainName'></span>
       #trainSchedule
         strong Select a train to view its current schedule.
+
+Added a new line for test
