added a new line

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,3 +11,4 @@ block content
       strong  <span id='trainName'></span>
       #trainSchedule
         strong Select a train to view its current schedule.
+Some nee line
