--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 This is how you find your train at the station
+  h1 This is how you find your train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
