--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 Find your Train 
   p Select a train below to see its current schedule.
   #wrapper
     #trainList
