--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Train Schedule
-  p Select your train below to see its current schedule...
+  p Select your train below to see its current schedule........
   #wrapper
     #trainList
       h2 Trains
