--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
-extends layout
+iextends layout
 
 block content
-  h1 Find your Trains
+  h1 Find your new train 
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
