--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,3 +8,5 @@ html
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='/javascripts/global.js')
+    
+    WRONG CODE --- asda
