--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1 Train Schedule
   p Select your train below to see its current schedule.
+ < h1 Naveen's new feature 
   #wrapper
     #trainList
       h2 Trains
