--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   h1 Train Schedule
   p Select your train below to see its current schedule.
- < h1 Naveen's new feature 
+ < h1 Naveen's new feature >
+<newwwwww>
   #wrapper
     #trainList
       h2 Trains
