Modified welcome text

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1 Train Schedule: Find your train !
   p Select your train below to see its current schedule.
+  p Be aware of recent changes in the timetable
   #wrapper
     #trainList
       h2 Trains
