change header text Pacheco

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,9 @@
 extends layout
 
+iKSJHJKHSKJSHSJKHSKJSHkjh
+
 block content
-  h1 Train Schedule
+  h1 Find your Train! Porra!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
