--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1 Find your train!
+  h1 Find your trainx2!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
