--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
-extends layout
+xtends layout
 
 block content
-  h1 Train Schedule
-  p Select your train below to see its current schedule.
+  h1 Find your train!
+  p Select our train below to see its current schedule.
   #wrapper
     #trainList
       h2 Trains
