--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your Train!
-  p Select your train below to see its current schedule.
+  p Select your train below to see its current schedule. Check it out
   #wrapper
     #trainList
       h2 Trains
