--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your Flight to Go Holiday!
+  h1 Find your Flight to Go Holiday! modified again
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
