--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1  Schedule
+  h1  Train Your Schedule
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
