Demo Change Header

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule will be change
+  h1 Train Schedule will be change for better Time !
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
