changed in test branch

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,3 +11,6 @@ block content
       strong  <span id='trainName'></span>
       #trainSchedule
         strong Select a train to view its current schedule.
+    #branchInfo 
+      strong  <span id='branchName'></span>
+        strong test branch.    
