--- a/views/index.jade
+++ b/views/index.jade
@@ -14,3 +14,6 @@ block content
     #branchInfo 
       strong  <span id='branchName'></span>
         strong test branch.    
+    #userInfo
+      userName: Cloud User
+      email: cloud_user@gmail.com
