--- a/views/index.jade
+++ b/views/index.jade
@@ -16,4 +16,4 @@ block content
         strong test branch.    
     #userInfo
       userName: Cloud User
-      email: cloud_user@gmail.com
+      email: cloud_user@test.com
