--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Dan is the best!!!!!!
-  p Select your train below to see its current schedule.
+  p Worship him
   #wrapper
     #trainList
       h2 Trains
