Changed title for app

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,10 @@
 extends layout
 
 block content
-  h1 Train Schedule
+  h1 Find your train!
   p Select your train below to see its current schedule.
   #wrapper
-    #trainList
+   #trainList
       h2 Trains
       #trains.d-flex.flex-row
     #trainInfo
