--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your trains. This is the first time in ensono server
+  h1 CANCELLED THE CHANGE IN BRANCH3
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
