changed the header again

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 find the train schedule!
+  h1 find the train schedule! find the schedule again!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
