--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  find your bus or train!
+  find your bus or train or bike
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
