Changed headline to get

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 locate my train
+  h1 get my train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
