--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  h1 Detect my train
+  h1 Find my train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
-      h2 Trains
+      h2 Tr1ains
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
