--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 find your train right now!!
+  h1 find your train right now! PART 2!!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
