--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Fing Your Train!
+  h1 Fing Your Train Befote its to late!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
