--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,13 @@
 extends layout
 
 block content
-  h1 Train Schedule
-  p Select your train below to see its current schedule.
-  #wrapper
-    #trainList
-      h2 Trains
-      #trains.d-flex.flex-row
-    #trainInfo
+/bin/bash: q: command not found
+ 16:26:06 up  1:13,  1 user,  load average: 0.01, 0.02, 0.00
+USER     TTY      FROM             LOGIN@   IDLE   JCPU   PCPU WHAT
+cloud_us pts/0    localhost        15:17    5.00s  0.32s  0.00s /bin/bash -c (w) < /tmp/vPl9a0C/2 >/tmp/vPl9a0C/3 2>&1
+/bin/bash: q: command not found #trainInfo
       strong  <span id='trainName'></span>
       #trainSchedule
-        strong Select a train to view its current schedule.
+	strong Select a train to view its current schedule
+
+
