--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your train to Native 
+  h1 Find your train to Native and comeback 
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
