--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your train now, i need help pushing this upstream
+  h1 Find your train now.
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
