--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 This is the Train Schedule App
+  h1 WHAT A FANTASTIC TRAIN
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
