made another change on new branch

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find Your Train - this change should be on new branch
-  p Select your train below to see its current schedule.
+  p Select your train below to see its current schedule. made another change on the new branch.
   #wrapper
     #trainList
       h2 Trains
