--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Mehdi test 2
+  h1 Mehdi test El hajbi
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
