change header text

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,10 @@
 extends layout
 
 block content
-  h1 find your train
+  h1 train will be stated in 5 miN 
+
+
+
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
