--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,7 @@
 extends layout
 
-block content
-  h1 Train Schedule
-  p Select your train below to see its current schedule.
+block content h1 Find your train
+p Select your train below to see its current schedule.
   #wrapper
     #trainList
       h2 Trains
