--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 catch a train
+  h1 rescedule the train .. bye
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
