--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,9 @@ extends layout
 
 block content
   h1 rescedule the train .. bye
-  p Select your train below to see its current schedule.
+  
+feedback about the train in the websitekcjc
+p Select your train below to see its current schedule.
   #wrapper
     #trainList
       h2 Trains
