--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block content
+block cont a 
   h1 Train Schedule
   p Select your train below to see its current schedule.
   #wrapper
