--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Where is my train
+  h1 Find my train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
